[package]
name = "radbird"
description = "Retrieve RADb to generate bird static routes"
version = "0.1.0"
authors = ["Arnie97 <arnie97@gmail.com>"]
edition = "2018"
repository = "https://github.com/arnie97/radbird"
license = "MIT"
keywords = ["RADb", "Bird", "BGP"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr-utils = "0.5.0"
